Map border fix on small screen

--- a/source/style.styl
+++ b/source/style.styl
@@ -35,5 +35,9 @@ h1
 
 #map
     height 400px
-    border-top 1px solid #D1D1D1
     border-bottom 1px solid #D1D1D1
+
+@media (max-width: 768px)
+    #map
+        border-top 1px solid #D1D1D1
+        border-bottom none
